--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
      <div id='msg_area'>
         <div id='robot'>
           <div id='bot'></div>
-           <h3>Aco Chatbot</h3> 
-        
-        </div>
+             
+           <h3>YE Chatbot</h3> 
+             </div>
            <div id='chatbox'>
              <p id='botFirstMessage' class= 'bottext'><span>loading...</span></p><br>         
              <div id='optfirstmessage' >   
